z-index fix contact button

--- a/resources/scss/global/global.scss
+++ b/resources/scss/global/global.scss
@@ -50,3 +50,6 @@ img {
         font-size: 12px !important;
     }
 }
+.Window__Component-sc-17wvysh-0 {
+    z-index: 200 !important;
+}
